correcting the tab spacing in navbar

--- a/styles.css
+++ b/styles.css
@@ -275,7 +275,7 @@ noscript{
     background-color: rgba(255, 255, 255, 0.079);
     backdrop-filter: blur(50px);
     height: 80px;
-    width: 80%;
+    width: 90%;
     display: flex;
     align-items: center;
     padding: 0px 20px;
@@ -1325,10 +1325,10 @@ noscript{
 
 .education-chain .university-logo {
     position: absolute;
-    left: -23px;
+    left: -30px;
     top: 0;
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     overflow: hidden;
     background: white;
